<resources>
    <string name="app_name">ChatApp</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_otp_sent_to_your_mobile_number">Enter OTP sent to your mobile number</string>
    <string name="check_entered_number_for">Check entered number for</string>
    <string name="one_time_password">One Time Password</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp">Otp</string>
    <string name="verify_1234567890">Verify +1234567890</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify_captcha">Verify Captcha</string>
    <string name="continue_btn">Continue</string>
    <string name="chatapp">ChatApp</string>
    <string name="create_profile">Create Profile</string>
    <string name="enter_username">Enter Username</string>
    <string name="chat">Chat</string>
    <string name="tap_user_profile_to_start_chatting">Tap user profile to start chatting</string>
    <string name="name">Name</string>
    <string name="back_arrow">Back arrow</string>
    <string name="status">Status</string>
    <string name="send_message">Send message</string>
    <string name="attach_file">Attach file</string>
    <string name="attach_image">Attach image</string>
    <string name="send">Send</string>
    <string name="message_text">Message text</string>
    <string name="image_received">Image received</string>
    <string name="image_sent">Image Sent</string>
    <string name="delete_message">Delete message</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="create_your_account_with_just_an">Create your account with just an</string>
    <string name="email">Email</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="and">and</string>
    <string name="login_with">Login with</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in_instead">Sign in instead</string>
    <string name="logout">Logout</string>
</resources>