<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/home_bg"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textAlignment="viewStart"
            android:textStyle="bold|normal"
            android:text="@string/name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtLogout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/logout"
            android:gravity="end"
            android:textAlignment="viewEnd"
            android:textColor="@color/logout"
            android:textSize="20sp"
            android:textStyle="bold|normal" />

    </LinearLayout>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/text_color"
        android:textAlignment="center"
        android:textStyle="bold|normal"
        android:text="@string/chat"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/home_msg"
        android:textAlignment="center"
        android:textStyle="bold|normal"
        android:text="@string/tap_user_profile_to_start_chatting"
        android:textSize="13sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="15dp"
        android:background="@color/home_view_bg" />

    <LinearLayout
        android:id="@+id/llRec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcRec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_profile" />

    </LinearLayout>


</LinearLayout>