<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/button_color">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:tint="@color/white"
                android:layout_marginVertical="15dp"
                android:src="@drawable/baseline_arrow_back_24"
                android:contentDescription="@string/back_arrow" />
            
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgProfile"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:src="@drawable/profile"
                android:layout_marginStart="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold|normal"
                    android:text="@string/name"
                    android:textSize="18sp"
                    android:textColor="@color/toolbar_text"
                    android:layout_gravity="center"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/txtStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold|normal"
                    android:textAlignment="textStart"
                    android:text="@string/status"
                    android:textSize="14sp"
                    android:textColor="@color/toolbar_text"
                    android:visibility="invisible" />

            </LinearLayout>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/llChat1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/chat_screen"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llChat2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llChat1"
        android:background="@drawable/bottom_shape"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp"
            android:layout_weight="2"
            android:padding="8dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="1dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:padding="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <EditText
                        android:id="@+id/etMsg"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:autofillHints="@string/send_message"
                        android:background="@drawable/background_shape"
                        android:gravity="start"
                        android:hint="@string/send_message"
                        android:inputType="text"
                        android:paddingStart="5dp"
                        android:paddingTop="12dp"
                        android:paddingEnd="1dp"
                        android:textColor="@color/form_text_color"
                        android:textColorHint="@color/hint_color"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="VisualLintTextFieldSize" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/imgPin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="9dp"
                    android:layout_weight="3"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/baseline_attachment_24"
                    app:tint="@color/icon"
                    android:contentDescription="@string/attach_file" />

                <ImageView
                    android:id="@+id/imgCamera"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="9dp"
                    android:layout_weight="3"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/baseline_camera_alt_24"
                    app:tint="@color/icon"
                    android:contentDescription="@string/attach_image" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        
        <ImageView
            android:id="@+id/imgSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_send"
            app:tint="@color/white"
            android:padding="12dp"
            android:layout_marginEnd="9dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/button_color"
            android:background="@drawable/background_shape"
            android:contentDescription="@string/send" />

    </LinearLayout>

</RelativeLayout>