<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    tools:context=".ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgProfile"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/profile" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_profile"
        android:textSize="20sp"
        android:textStyle="bold|normal"
        android:textColor="@color/text_color"
        android:layout_marginTop="20dp"
        android:textAlignment="center" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@color/white"
            android:padding="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_shape"
                android:hint="@string/enter_username"
                android:textColorHint="@color/hint_color"
                android:padding="10dp"
                android:ems="1"
                android:inputType="text"
                android:textSize="21sp"
                android:textStyle="bold|normal"
                android:textColor="@color/black"
                android:autofillHints="Phone number" />

            <Button
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continue_btn"
                android:textSize="16sp"
                android:textStyle="bold|normal"
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:backgroundTint="@color/button_color" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>